mighty-fine/might-fine-deploy.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: podinfo
  namespace: dev
  annotations:
    flux.weave.works/tag.mightfined: glob:*
spec:
  replicas: 5
  selector:
    matchLabels:
      app: mighty-fine
  template:
    metadata:
      labels:
        app: mighty-fine
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: metrics-demo
        image: quay.io/brice/metrics-demo
        command:
        - --port=9898
        ports:
        - containerPort: 9898
        readinessProbe:
          httpGet:
            path: /readyz
            port: 9898
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 9898
          initialDelaySeconds: 1
          periodSeconds: 10
          failureThreshold: 2
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
